--- a/matches.html
+++ b/matches.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Roboto" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
@@ -20,10 +21,10 @@
           <div class="carousel-item active">
             <div class="card border-0">
               <br>
-              <i class="fas fa-piggy-bank fa-10x mx-auto library"></i>
+              <i class="fas fa-piggy-bank fa-8x mx-auto library"></i>
               <div class="card-body">
-                <h5 class="card-title">Long Island Credit Union</h5>
-                <p class="card-text">Long Island Credit Union has been around since 1961 serving the Long Island community.</p>
+                <h5 class="card-title title">Long Island Credit Union</h5>
+                <p class="card-text subtitle">Long Island Credit Union has been around since 1961 serving the Long Island community.</p>
               </div>
               <div class="row">
                 <div class="col-md-4">
@@ -33,7 +34,7 @@
                       <img src="image/emily.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Emily Jones</h5>
+                      <h5 class="card-title subtitle">Emily Jones</h5>
                       <p><em>Accounts Manager</em></p>
                       <p class="card-text">Emily is responsible for managing an array of accounts. She also builds relationships with new clients and leads team productivity.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -48,7 +49,7 @@
                       <img src="image/jerome.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Jerome Daniels</h5>
+                      <h5 class="card-title subtitle">Jerome Daniels</h5>
                       <p><em>Assistant Branch Manager</em></p>
                       <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -63,9 +64,9 @@
                       <img src="image/elizabeth.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Elizabeth Gomez</h5>
+                      <h5 class="card-title subtitle">Elizabeth Gomez</h5>
                       <p><em>Bank Teller</em></p>
-                      <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services</p>
+                      <p class="card-text">Elizabeth provides account services to customers. She also answers questions in person or on telephone regarding other bank services.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
@@ -81,10 +82,10 @@
           <div class="carousel-item">
             <div class="card border-0">
               <br>
-              <i class="fas fa-home fa-10x mx-auto bank owl"></i>
+              <i class="fas fa-home fa-8x mx-auto bank owl"></i>
               <div class="card-body">
-                <h5 class="card-title">Bob-Joe’s Construction Company</h5>
-                <p class="card-text">Bob-Joe has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
+                <h5 class="card-title title">Bob-Joe’s Construction Company</h5>
+                <p class="card-text subtitle">Bob-Joe has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
               </div>
               <!-- Thomas' profile -->
                <div class="d-none row person2">
@@ -94,7 +95,7 @@
                       <img src="image/thomas-full.jpg" width=100%></img>
                       <br>
                       <br>
-                      <p class="text-left">Role: Architectural and Engineering Manager</p>
+                      <p class="text-left subtitle">Thomas Napier</p>
                       <p class="text-left">
                         Thomas is experienced in repairing household appliances. As a manger, he is responsible for solving technical and mechanical problems on site. He also draws designs and blueprints for his team and creates models of buildings to present to clients.
                       </p>
@@ -112,7 +113,7 @@
                       <img src="image/thomas.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Thomas Napier</h5>
+                      <h5 class="card-title subtitle">Thomas Napier</h5>
                       <p><em>Architectural and Engineering Manager</em></p>
                       <p class="card-text">Thomas has been with Bob-Joe for 15 years working his way up from doing household roofing to being a project manager on long-term contracts. </p>
                       <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -127,7 +128,7 @@
                       <img src="image/derrick.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Derrick Long</h5>
+                      <h5 class="card-title subtitle">Derrick Long</h5>
                       <p><em>Civil Engineer</em></p>
                       <p class="card-text">Derrick plans, designs and oversees construction and maintenance of building structures and infrastructure.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -142,7 +143,7 @@
                       <img src="image/katherine.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Katherine Williams</h5>
+                      <h5 class="card-title subtitle">Katherine Williams</h5>
                       <p><em>Construction Assistant</em></p>
                       <p class="card-text">Katherine assists construction tradespeople on construction sites. She ensures materials and tools are on site.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -160,10 +161,10 @@
           <div class="carousel-item">
             <div class="card border-0">
               <br>
-              <i class="fas fa-headphones fa-10x mx-auto radio"></i>
+              <i class="fas fa-headphones fa-8x mx-auto radio"></i>
               <div class="card-body">
-                <h5 class="card-title">WKZ Radio Station</h5>
-                <p class="card-text">WKZ Radio is a rock music station that brings you all the best rock songs from the past decades.</p>
+                <h5 class="card-title title">WKZ Radio Station</h5>
+                <p class="card-text subtitle">WKZ Radio is a rock music station that brings you all the best rock songs from the past decades.</p>
               </div>
               <!-- Rachel's profile -->
                <div class="d-none row person1">
@@ -173,7 +174,7 @@
                       <img src="image/rachel-full.jpg" width=100%></img>
                       <br>
                       <br>
-                      <p class="text-left">Rachel Matthews</p>
+                      <p class="text-left subtitle">Rachel Matthews</p>
                       <p class="text-left">As the radio and television announcer for WKZ Rachel hosts civic, charitable, or promotional events that are broadcast over television or radio. She also writes and edits video and scripts for broadcasts. She is responsible for locating guests to appear on talk or interview shows and uses video and recording technology in all her programs.</p>
                       <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
@@ -189,7 +190,7 @@
                       <img src="image/rachel.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Rachel Matthews</h5>
+                      <h5 class="card-title subtitle">Rachel Matthews</h5>
                       <p><em>Radio and television Announcer</em></p>
                       <p class="card-text">Rachel has been with WKZ for 5 years. She started as an intern and worked her way up to full-time announcer.</p>
                       <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -204,7 +205,7 @@
                       <img src="image/janine.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Janine Walker</h5>
+                      <h5 class="card-title subtitle">Janine Walker</h5>
                       <p><em>Producer</em></p>
                       <p class="card-text"> Janine creates content and manages the whole radio production process for both live and recorded programmes.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
@@ -219,7 +220,7 @@
                       <img src="image/joseph.png" height="128"></img>
                       <br>
                       <br>
-                      <h5 class="card-title">Joseph Lane</h5>
+                      <h5 class="card-title subtitle">Joseph Lane</h5>
                       <p><em>Radio Programme Controller</em><p>
                       <p class="card-text">Joseph leads programming teams on commercial radio stations and manages advertisement content.</p>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
