--- a/interests.html
+++ b/interests.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Roboto" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
@@ -18,143 +18,128 @@
       <div class="row">
         <div class="col">
           <br>
-          <h1>It seems like you might be interested in Building and Construction Trades.</h1>
-          <p>An occupation in this field is called Architectural and Engineering Manager.</p>
+          <h1 class="title">It seems like you might be interested in Building and Construction Trades.</h1>
+          <p class="subtitle">An occupation in this field is called Architectural and Engineering Manager.</p>
         </div>
         <div class="card-columns">
-  <div class="card">
-      <div class="card-header">
-        Hear from someone in the field
-      </div>
-      <video width=100% controls>
-      <source src="image/construction.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Additional Information
-    </div>
-    <blockquote class="blockquote mb-0 card-body">
-      <p>The classes that will help you to learn the knowledge and skill to be successful in this career are mechanics, math, environmental science, and drafting/computer-aided drafting.</p>
-    </blockquote>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Wages
-    </div>
-    <div class="card-body text-center">
-      <h5 class="card-title">In 2016, the average annual wage in California was $166,580</h5>
-      <cite> <a href="https://www.bls.gov/oes/2016/may/oes_ca.htm">Bureau of Labor Statistics</a> </cite>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Preparation Required
-    </div>
-    <div class="card-body">
-      <p class="card-text">Most of these occupations require graduate school. For example, they may require a master's degree, and some require a Ph.D., M.D., or J.D. (law degree).</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img" src="image/construction1.jpg" width=100%>
-  </div>
-  <div class="card">
-  <div class="card-header">
-    About the Job
-  </div>
-  <div class="card-body">
-    <p class="card-text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
-    <ul>
-      <li>Supervisory Civil Engineer</li>
-      <li>Senior Program Manager</li>
-      <li>Senior Engineering Manager</li>
-      <li>Research Development Manager</li>
-      <li>Prototype Engineer Manager</li>
-      <li>Project Manager</li>
-    <ul>
-  </div>
-</div>
-  <div class="card">
-    <div class="card-header">
-      Education & Training
-    </div>
-    <div class="card-body">
-    <ul>
-      <li>Architecture</li>
-      <li>Landscape Architecture</li>
-      <li>Chemical and Biomolecular Engineering</li>
-      <li>Civil Engineering</li>
-      <li>Computer Software Engineering</li>
-      <li>Biochemical Engineering</li>
-      <li>Engineering/Industrial Management </li>
-    </ul>
-  </div>
-  </div>
-  <div class="card">
-  <div class="card-header">
-    Tasks you might do
-  </div>
-  <div class="card-body">
-    <p class="card-text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
-    <ul>
-      <li>Plan, direct, or coordinate survey work with other project activities.</li>
-      <li>Evaluate the environmental impacts of engineering, architecture, or research and development activities.</li>
-      <li>Solicit project support by conferring with officials or providing information to the public.</li>
-    <ul>
-  </div>
-</div>
-  <div class="card">
-    <img class="card-img" src="image/thomas-full.jpg" width=100%>
-  </div>
-</div>
-
-      </div>
-    <!-- Yes/No button
-      <div>
-        <form id="yes_no" action="">
-          <input type="radio" name="rdo" id="yes"/>
-          <input type="radio" name="rdo" id="no" checked/>
-          <div class="switch">
-            <label for="yes">Yes</label>
-            <label for="no">No</label>
-            <span></span>
+          <div class="card">
+            <div class="card-header">
+              Hear from someone in the field
+            </div>
+            <video width=100% controls>
+              <source src="image/construction.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
-        </form>
-      </div> -->
-      <br>
+          <div class="card">
+            <div class="card-header">
+              Additional Information
+            </div>
+            <blockquote class="blockquote mb-0 card-body">
+              <p class="text">The classes that will help you to learn the knowledge and skill to be successful in this career are mechanics, math, environmental science, and drafting/computer-aided drafting.</p>
+            </blockquote>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              Wages
+            </div>
+            <div class="card-body text-center">
+              <h5 class="card-title text">In 2016, the average annual wage in California was $166,580</h5>
+              <cite> <a href="https://www.bls.gov/oes/2016/may/oes_ca.htm">Bureau of Labor Statistics</a> </cite>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              Preparation Required
+            </div>
+            <div class="card-body">
+              <p class="card-text text">Most of these occupations require graduate school. For example, they may require a master's degree, and some require a Ph.D., M.D., or J.D. (law degree).</p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="image/construction1.jpg" width=100%>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              About the Job
+            </div>
+            <div class="card-body">
+              <p class="card-text text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
+              <ul class="text">
+                <li>Supervisory Civil Engineer</li>
+                <li>Senior Program Manager</li>
+                <li>Senior Engineering Manager</li>
+                <li>Research Development Manager</li>
+                <li>Prototype Engineer Manager</li>
+                <li>Project Manager</li>
+              <ul>
+            </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            Education & Training
+          </div>
+          <div class="card-body">
+            <ul class="text">
+              <li>Architecture</li>
+              <li>Landscape Architecture</li>
+              <li>Chemical and Biomolecular Engineering</li>
+              <li>Civil Engineering</li>
+              <li>Computer Software Engineering</li>
+              <li>Biochemical Engineering</li>
+              <li>Engineering/Industrial Management </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            Tasks you might do
+          </div>
+          <div class="card-body text">
+            <p class="card-text">In this job, you’ll plan, direct, or coordinate activities in fields such as architecture, engineering, or research and development. Here are other jobs in this field:</p>
+            <ul>
+              <li>Plan, direct, or coordinate survey work with other project activities.</li>
+              <li>Evaluate the environmental impacts of engineering, architecture, or research and development activities.</li>
+              <li>Solicit project support by conferring with officials or providing information to the public.</li>
+            <ul>
+          </div>
+      </div>
+      <div class="card">
+        <img class="card-img" src="image/thomas-full.jpg" width=100%>
+      </div>
+    </div>
+  </div>
+  <br>
     <div class="row span">
       <div class="card" width=100%>
         <div class="card-body">
-        Permission for parents to agree to make contact <br> <br>
-        CommUnity Connect supports students in exploring their community assets and professionals who can share with them what they do for a living. Your child should share what they do on this site and the people who share their interests.  After your child completes the survey and identifies people in your local community, you can intervene to foster the introduction and planned activities such as job shadowing, mentoring or other appropriate events to help your child find a career interest.  Your child can save their information on this site and access it through their account. We wish you luck in helping your child identify their interests and talents, take courses in school that will enable them to gain additional knowledge so that they can make informed decisions about how they want to spend their adult lives. Check the box below to confirm your consent.
+          <p class ="subtitle">Permission for parents to agree to make contact</p>
+          <p class ="text"> <strong class="subtitle">CommUnity Connect</strong> supports students in exploring their community assets and professionals who can share with them what they do for a living. Your child should share what they do on this site and the people who share their interests.  After your child completes the survey and identifies people in your local community, you can intervene to foster the introduction and planned activities such as job shadowing, mentoring or other appropriate events to help your child find a career interest.  Your child can save their information on this site and access it through their account. We wish you luck in helping your child identify their interests and talents, take courses in school that will enable them to gain additional knowledge so that they can make informed decisions about how they want to spend their adult lives. Click "Yes" below to confirm your consent.</p>
+        </div>
+        <div>
+          <form id="yes_no" action="">
+            <input type="radio" name="rdo" id="yes"/>
+            <input type="radio" name="rdo" id="no" checked/>
+            <div class="switch">
+              <label for="yes">Yes</label>
+              <label for="no">No</label>
+              <span></span>
+            </div>
+          </form>
+        </div>
         <br>
         <br>
       </div>
-      <div>
-        <form id="yes_no" action="">
-          <input type="radio" name="rdo" id="yes"/>
-          <input type="radio" name="rdo" id="no" checked/>
-          <div class="switch">
-            <label for="yes">Yes</label>
-            <label for="no">No</label>
-            <span></span>
-          </div>
-        </form>
-      </div>
-      <br>
-      <br>
     </div>
-  </div>
-  <br>
-  <br>
+    <br>
+    <br>
     <div class = "row text-center">
       <div class = "col-12">
-      <a href="matches.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
-     View matches</button></a>
-    </div>
+        <a href="matches.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
+       View matches</button></a>
+      </div>
    </div>
-    </div>
+ </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
